--- a/slides.html
+++ b/slides.html
@@ -425,10 +425,6 @@
 <section id="cross-validation" class="slide level2 center">
 <h2>Cross-validation:</h2>
 
-<img data-src="slides_files/figure-revealjs/unnamed-chunk-1-1.svg" width="960" class="r-stretch"></section>
-<section id="cross-validation-1" class="slide level2 center">
-<h2>Cross-validation:</h2>
-
 <img data-src="slides_files/figure-revealjs/vfold_gif-.gif" width="960" class="r-stretch"></section>
 <section id="rsample-and-friends" class="slide level2 center">
 <h2>rsample and friends</h2>
@@ -471,7 +467,7 @@
 <span id="cb5-2"><a href="#cb5-2"></a>  <span class="fu">scale_fill_distiller</span>(<span class="at">name =</span> <span class="st">"Canopy area (2019)"</span>, <span class="at">palette =</span> <span class="st">"YlGn"</span>, <span class="at">direction =</span> <span class="dv">1</span>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 
 </div>
-<img data-src="slides_files/figure-revealjs/unnamed-chunk-4-1.svg" width="960" class="r-stretch"></section>
+<img data-src="slides_files/figure-revealjs/unnamed-chunk-3-1.svg" width="960" class="r-stretch"></section>
 <section id="are-these-folds-really-unrelated" class="slide level2 center">
 <h2>Are these folds really unrelated?</h2>
 <div class="cell">
@@ -518,10 +514,6 @@
 <section class="slide level2 center">
 
 
-<img data-src="slides_files/figure-revealjs/boston_buffer_all_gif-.gif" width="960" class="r-stretch"></section>
-<section class="slide level2 center">
-
-
 <img data-src="fig-comparisons-1.png" class="quarto-figure-center r-stretch"><p>https://doi.org/FILL_ME_IN</p>
 </section>
 <section id="other-features" class="slide level2 center">
@@ -542,6 +534,7 @@
 <p><i class="fab fa-mastodon"></i> <a href="https://fosstodon.org/@MikeMahoney218"><span class="citation" data-cites="MikeMahoney218">@MikeMahoney218</span><span class="citation" data-cites="fosstodon.org">@fosstodon.org</span></a></p>
 <p><br></p>
 <p>Slides available at <a href="https://mm218.dev/boston_useR_2023">mm218.dev/boston_useR_2023</a></p>
+<p>More spatialsample: <a href="https://spatialsample.tidymodels.org/">https://spatialsample.tidymodels.org/</a></p>
 <div class="footer footer-default">
 <p>spatialsample: A tidy approach to spatial cross-validation - https://mm218.dev/boston_useR_2023</p>
 </div>
