--- a/slides.html
+++ b/slides.html
@@ -514,7 +514,8 @@
 <section class="slide level2 center">
 
 
-<img data-src="fig-comparisons-1.png" class="quarto-figure-center r-stretch"><p>https://doi.org/FILL_ME_IN</p>
+<img data-src="fig-comparisons-1.png" class="quarto-figure-center r-stretch"><p><br></p>
+<p><a href="https://doi.org/10.48550/arXiv.2303.07334">https://doi.org/10.48550/arXiv.2303.07334</a></p>
 </section>
 <section id="other-features" class="slide level2 center">
 <h2>Other features:</h2>
